    Although not needed for tz's own applications, which are single-threaded,
    this supports POSIX better if the tz library is used in multithreaded apps.

    zdump now uses localtime_r and tzset if available, as this is a
    bit cleaner and faster than plain localtime.  Compile with
    -DHAVE_LOCALTIME_R=0 and/or -DHAVE_TZSET=0 if your system lacks them.

    The tz code now attempts to infer TM_GMTOFF and TM_ZONE if not
    already defined, to make it easier to configure on common platforms.
    Define NO_TM_GMTOFF and NO_TM_ZONE to suppress this.

    Unless the new macro UNINIT_TRAP is defined to 0, the tz code now
    assumes that reading uninitialized memory yields garbage values
    but does not cause other problems such as traps.

    If TM_GMTOFF is defined and UNINIT_TRAP is not 0, mktime is now
    more likely to guess right for ambiguous time stamps near
    transitions where tm_isdst does not change.

    If HAVE_STRFTIME_L is defined to 1, the tz library now defines
    strftime_l for compatibility with recent versions of POSIX.
    Only the C locale is supported, though.  HAVE_STRFTIME_L defaults
    to 1 on recent POSIX versions, and to 0 otherwise.

    zdump now builds with the tz library unless USE_LTZ is defined to 0,
    This lets zdump use tz features even if the system library lacks them.
    To build zdump with the system library, use 'make CFLAGS=-DUSE_LTZ=0
    TZDOBJS=zdump.o CHECK_TIME_T_ALTERNATIVES='.

    tzselect -c now uses a hybrid distance measure that works better
    in Africa.  (Thanks to Alan Barrett for noting the problem.)

    The C source code now ports to NetBSD when GCC_DEBUG_FLAGS is used,
    or when time_tz is defined.

    When HAVE_UTMPX_H is set the 'date' command now builds on systems
    whose <utmpx.h> file does not define WTMPX_FILE, and when setting
    the date it updates the wtmpx file if _PATH_WTMPX is defined.
    This affects GNU/Linux and similar systems.
